--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "private": false,
   "scripts": {
     "dev": "parcel ./src/index.html -p 3000",
-    "build": "parcel build ./src/index.html"
+    "build": "parcel build ./src/index.html",
+    "test": "jest"
   },
   "devDependencies": {
+    "jest": "^24.9.0",
     "parcel-bundler": "^1.12.4"
   }
 }
