--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "eslint": "^6.7.1",
+    "eslint-config-google": "^0.14.0",
     "jest": "^24.9.0",
     "parcel-bundler": "^1.12.4"
   }
