--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "parcel ./src/index.html -p 3000",
+    "start": "parcel ./src/index.html -p 3000",
     "build": "parcel build ./src/index.html",
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "babel-jest": "^24.9.0",
     "eslint": "^6.7.1",
     "eslint-config-google": "^0.14.0",
     "jest": "^24.9.0",
